--- a/src/main/docs/guide/cloud/cloudConfiguration.adoc
+++ b/src/main/docs/guide/cloud/cloudConfiguration.adoc
@@ -1,6 +1,18 @@
 Applications built for the Cloud often need to adapt to running in a Cloud environment, read and share configuration in a distributed manner, and externalize configuration to the environment where necessary.
 
-Micronaut's <<environments, Environment>> concept is by default Cloud platform-aware and makes a best effort to detect the underlying active environment.
+Micronaut's <<environments, Environment>> concept can be configured to be Cloud platform-aware and makes a best effort to detect the underlying active Cloud environment.
+
+To enable this feature you can call `deduceCloudEnvironment(true)` on the api:context.ApplicationContextBuilder[] interface when starting Micronaut. For example:
+
+.Enabling Cloud Environment Detection
+[source,java]
+----
+public static void main(String...args) {
+    Micronaut.build(args)
+             .deduceCloudEnvironment(true)
+             .start();
+}
+----
 
 You can then use the api:context.annotation.Requires[] annotation to <<conditionalBeans,conditionally load bean definitions>>.
 
