--- a/src/main/docs/guide/appendix/breaks.adoc
+++ b/src/main/docs/guide/appendix/breaks.adoc
@@ -23,19 +23,26 @@ dependency::micronaut-websocket[]
 
 The instrumentation features for Reactor have been moved to the `micronaut-reactor` module. If you require instrumentation of reactive code paths (for distributed tracing for example) you should make sure your application depends on `micronaut-reactor`:
 
-dependency::micronaut-reactor[groupId="io.micronaut.reactor"]
+dependency:micronaut-reactor[groupId="io.micronaut.reactor"]
+
+==== Session Support Moved to Session Module
+
+The Session handling features have been moved to a new `micronaut-session` module.
+If you require session support, you should make your application depend on
+
+dependency:micronaut-session[groupId="io.micronaut.session"]
 
 ==== Kotlin Flow Support Moved to Kotlin Module
 
 Support for the Kotlin `Flow` type has been moved to the `micronaut-kotlin` module. If your application uses Kotlin `Flow` you should ensure the `micronaut-kotlin-runtime` module is on your application classpath:
 
-dependency::micronaut-kotlin-runtime[groupId="io.micronaut.kotlin"]
+dependency:micronaut-kotlin-runtime[groupId="io.micronaut.kotlin"]
 
 ==== Compilation Time API Split into new module
 
 In order to keep the runtime small all types and interfaces that are used at compilation time only (like the `io.micronaut.inject.ast` API) have been moved into a separate module:
 
-dependency::micronaut-core-processor[]
+dependency:micronaut-core-processor[]
 
 If you are using types and interfaces from this module you should take care to split the compilation time and runtime logic of your module into separate modules.
 
