--- a/src/main/docs/guide/httpServer/filters.adoc
+++ b/src/main/docs/guide/httpServer/filters.adoc
@@ -6,17 +6,17 @@ Filters support the following use cases:
 * Modification of the outgoing api:http.HttpResponse[]
 * Implementation of cross-cutting concerns such as security, tracing, etc.
 
-For a server application, the api:http.filter.HttpServerFilter[] interface `doFilter` method can be implemented.
+There are two ways to implement a filter. There is the "old" (pre Micronaut HTTP 4.0) approach using api:http.filter.HttpServerFilter[] (or api:http.filter.HttpClientFilter[]), and the "new" way using declarative filter methods. This guide only describes the latter.
 
-The `doFilter` method accepts the api:http.HttpRequest[] and an instance of api:http.filter.ServerFilterChain[].
+A filter method must be declared in a bean annotated with api:http.annotation.ServerFilter[], or api:http.annotation.ClientFilter[] if it should instead intercept requests made by the HTTP client. Each filter method must also be annotated with api:http.annotation.RequestFilter[], to run before the request is processed, or api:http.annotation.ResponseFilter[], to run after the request has completed to process the response.
 
-The `ServerFilterChain` interface contains a resolved chain of filters where the final entry in the chain is the matched route. The api:http.filter.ServerFilterChain.proceed(io.micronaut.http.HttpRequest)[] method resumes processing of the request.
+A filter method can take various parameters, such as the api:http.HttpRequest[] and the api:http.HttpResponse[] (only for response filters). The return type can be `void` or an updated api:http.HttpRequest[] (only for request filters) or api:http.HttpResponse[]. The different supported parameter and return types are described in the documentation of api:http.annotation.RequestFilter[] and api:http.annotation.ResponseFilter[].
 
-The `proceed(..)` method returns a Reactive Streams rs:Publisher[] that emits the response to be returned to the client. Implementors of filters can subscribe to the rs:Publisher[] and mutate the emitted api:http.MutableHttpResponse[] to modify the response prior to returning the response to the client.
+To write asynchronous filters, you can return a reactive publisher.
 
 To put these concepts into practice lets look at an example.
 
-IMPORTANT: Filters execute in the event loop, so blocking operations must be offloaded to another thread pool.
+IMPORTANT: Filters execute in the event loop by default. If you need to perform blocking operations, you can annotate the filter with api:scheduling.annotation.ExecuteOn[].
 
 == Writing a Filter
 
@@ -28,31 +28,26 @@ As an example, consider this `TraceService` that uses https://projectreactor.io[
 
 snippet::io.micronaut.docs.server.filters.TraceService[tags="imports,class", indent=0, title="A TraceService Example using Reactive Streams"]
 
-<1> The reactor:Mono[] type creates logic that executes potentially blocking operations to write the trace data from the request
-<2> Since this is just an example, the logic does nothing yet
-<3> The `Schedulers.boundedElastic` executes the logic
+<1> Since this is just an example, the logic does nothing yet
 
 You can then inject this implementation into your filter definition:
 
-snippet::io.micronaut.docs.server.filters.TraceFilter[tags="imports,class,endclass", indent=0, title="An Example HttpServerFilter"]
+snippet::io.micronaut.docs.server.filters.TraceFilter[tags="imports,class,endclass", indent=0, title="An Example ServerFilter"]
 
-<1> The api:http.annotation.Filter[] annotation defines the URI pattern(s) the filter matches
-<2> The class implements the api:http.filter.HttpServerFilter[] interface
-<3> The previously defined `TraceService` is injected via constructor
+<1> The api:http.annotation.ServerFilter[] annotation defines the URI pattern(s) the filter matches
+<2> The previously defined `TraceService` is injected via constructor
 
-The final step is to write the `doFilter` implementation of the api:http.filter.HttpServerFilter[] interface.
+The final step is to write the filter methods.
 
-snippet::io.micronaut.docs.server.filters.TraceFilter[tags="doFilter", indent=0, title="The doFilter implementation"]
+snippet::io.micronaut.docs.server.filters.TraceFilter[tags="doFilter", indent=0, title="The filter methods"]
 
 <1> `TraceService` is invoked to trace the request
-<2> If the call succeeds, the filter resumes request processing using https://projectreactor.io[Project Reactor]'s `switchMap` method, which invokes the `proceed` method of the api:http.filter.ServerFilterChain[]
-<3> Finally, the https://projectreactor.io[Project Reactor]'s `doOnNext` method adds a `X-Trace-Enabled` header to the response.
+<2> The request filter is marked to execute on a separate thread so that the blocking code in `TraceService` does not cause problems
+<3> Finally, a separate response filter method adds a `X-Trace-Enabled` header to the response.
 
-The previous example demonstrates some key concepts such as executing logic in a non-blocking manner before proceeding with the request and modifying the outgoing response.
+The previous example demonstrates some key concepts such as executing blocking logic in a worker thread before proceeding with the request and modifying the outgoing response.
 
-TIP: The examples use https://projectreactor.io[Project Reactor], however you can use any reactive framework that supports the Reactive streams specifications
-
-The api:http.annotation.Filter[] can use different styles of pattern for path matching by setting `patternStyle`. By default, it uses api:core.util.AntPathMatcher[] for path matching. When using Ant, the mapping matches URLs using the following rules:
+Filter patterns can be defined on the filter class (in the api:http.annotation.ServerFilter[] or api:http.annotation.ClientFilter[] annotation), or on the filter method (in the api:http.annotation.RequestFilter[] or api:http.annotation.ResponseFilter[] annotation). You can use different styles of pattern for path matching by setting `patternStyle`. By default, api:core.util.AntPathMatcher[] is used for path matching. When using Ant, the mapping matches URLs using the following rules:
 
 * ? matches one character
 * * matches zero or more characters
@@ -81,6 +76,37 @@ The other option is regular expression based matching. To use regular expression
 
 NOTE: Using `FilterPatternStyle.ANT` is preferred as the pattern matching is more performant than using regular expressions. `FilterPatternStyle.REGEX` should be used when your pattern cannot be written properly using Ant.
 
+== Continuations
+
+Request filters can define a special api:http.filter.FilterContinuation[] parameter to get more control of the downstream execution, and to be run further actions after it completes. For example, the above `TraceFilter` can be expressed using a single request filter:
+
+snippet::io.micronaut.docs.server.filters.TraceFilter2[tags="doFilter", indent=0, title="Single request filter"]
+
+<1> The request filter declares a api:http.filter.FilterContinuation[] parameter. The continuation will return a api:http.MutableHttpResponse[]
+<2> After the request processing is done, the filter calls the blocking `proceed` to run downstream filters and the controller
+<3> When downstream processing completes, the filter adds a `X-Trace-Enabled` header to the response returned by the continuation
+<4> The whole filter is executed on a worker thread to avoid blocking the event loop in the `proceed` call
+
+IMPORTANT: The call to `FilterContinuation.proceed` is blocking by default, so it should never be done on the event loop. Such filters should be run on a worker thread as described above. Alternatively, the continuation can also be declared to return a reactive type (`Publisher<HttpResponse<?>>`) to proceed in an asynchronous manner, similar to the old api:http.filter.FilterChain[] API.
+
 == Error States
 
-The publisher returned from `chain.proceed` should never emit an error. In the cases where an upstream filter emitted an error or the route itself threw an exception, the error response should be emitted instead of the exception. In some cases it may be desirable to know the cause of the error response and for this purpose an attribute exists on the response if it was created as a result of an exception being emitted or thrown. The original cause is stored as the attribute api:http.HttpAttributes#EXCEPTION[].
+In principle, downstream filters and controllers can produce exceptions, and response filters should be prepared to handle them. For a response filter to be called when there is an exception, it must declare the exception type as a parameter.
+
+.@Filter Response filter declaration
+|===
+|Declaration|Called when?
+
+|`void responseFilter(HttpResponse<?> response)`
+|Only called on non-exception response
+
+|`void responseFilter(Throwable failure)`
+|Only called on exception response
+
+|`void responseFilter(IOException failure)`
+|Only called on exception response, if the exception is an `IOException`
+
+|`void responseFilter(HttpResponse<?> response, @Nullable Throwable failure)`
+|Always called. `failure` will be `null` if there was no error. If there was an error, `response` will be `null`.
+
+Whether errors appear as exceptions depends on the context of the filter. For the Micronaut HTTP server, any exception is mapped to a non-exceptional api:http.HttpResponse[] with an error status code. This mapping happens before each filter, so a server filter will never actually see an exception. If you still want to access the original cause of the response, it is stored as the attribute api:http.HttpAttributes#EXCEPTION[].
