--- a/src/main/docs/guide/cloud/cloudConfiguration/distributedConfigurationVault.adoc
+++ b/src/main/docs/guide/cloud/cloudConfiguration/distributedConfigurationVault.adoc
@@ -1,6 +1,6 @@
 Micronaut integrates with https://www.vaultproject.io/[HashiCorp Vault] as a distributed configuration source.
 
-To enable support for Vault Configuration, create a `src/main/resources/bootstrap.yml` configuration file and add the following configuration:
+To enable support for Vault Configuration, make sure https://docs.micronaut.io/latest/guide/#bootstrap[bootstrap] is enabled and create a `src/main/resources/bootstrap.yml` file with the following configuration:
 
 .Integrating with HashiCorp Vault
 [source,yaml]
