--- a/src/main/docs/guide/httpServer/serverConfiguration/cors.adoc
+++ b/src/main/docs/guide/httpServer/serverConfiguration/cors.adoc
@@ -166,7 +166,7 @@ Micronaut CORS configuration applies by default to all endpoints in the running 
 As an alternative, CORS configuration can be applied in a more fine-grained manner to specific routes using the
 link:{api}/io/micronaut/http/server/cors/CrossOrigin.html[@CrossOrigin] annotation. This is applied to `@Controller` to apply the CORS configuration to all endpoints in the controller. Alternatively, the annotation can be applied to specific endpoints on a controller, for even more fine-grained control.
 
-The `@CrossOrigin` annotation maps with a one-to-one correspondence to application-wide link:{api}/io/micronaut/http/server/cors/CorsOriginConfiguration.html[CorsOriginConfiguration] configuration properties. To specify just an allowed origin, use `@CrossOrigin("https://foo.com")`. To specify additional configuration details,
+The `@CrossOrigin` annotation maps with a one-to-one correspondence to application-wide link:{api}/io/micronaut/http/server/cors/CorsOriginConfiguration.html[CorsOriginConfiguration] configuration properties. To specify just an allowed origin, use `@CrossOrigin("https://foo.com")`. To specify additional configuration details, use  a combination of annotation attributes the same as you would for specifying global `CorsOriginConfiguration` properties.
 
 [source,java]
 ----
@@ -179,51 +179,11 @@ The `@CrossOrigin` annotation maps with a one-to-one correspondence to applicati
 	maxAge = 3600
 )
 ----
-For this example, the controller class is annotated with `@CrossOrigin`, so the CORS configuration applies to all endpoints in the controller, but not to other routes in the application that don't otherwise have applicable CORS configuration.
 
-[source,java]
-----
-import io.micronaut.http.MediaType;
-import io.micronaut.http.annotation.Controller;
-import io.micronaut.http.annotation.Get;
-import io.micronaut.http.server.cors.CrossOrigin;
+The following example demonstrates how the annotation might be applied to a specific endpoint. To enable CORS for all endpoints in the controller, move the annotation to the class level and configure it appropriately.
 
-@CrossOrigin("https://hello.com") //
-@Controller("/hello")
-public class CorsController {
+snippet::io.micronaut.docs.http.server.cors.CorsController[tags="imports,controller", indent=0, title="@CrossOrigin Example"]
 
-    @Get(produces = MediaType.TEXT_PLAIN)
-    public String cors() {
-        return "Welcome to the worlds of CORS";
-    }
-
-    ...
-}
-----
-For the following example, the `@CrossOrigon` annotation is applied more specifically to the
-`GET /hello` endpoint, but not to `GET /hello/nocors`
-
-[source,java]
-----
-import io.micronaut.http.MediaType;
-import io.micronaut.http.annotation.Controller;
-import io.micronaut.http.annotation.Get;
-import io.micronaut.http.annotation.Get;
-import io.micronaut.http.server.cors.CrossOrigin;
-
-@Controller("/hello")
-public class MethodCorsController {
-
-    @CrossOrigin("https://hello.com") //
-    @Get(produces = MediaType.TEXT_PLAIN) //
-    public String cors() {
-        return "Welcome to the worlds of CORS";
-    }
-
-    @Produces(MediaType.TEXT_PLAIN)
-    @Get("/nocors")
-    public String nocorstoday() {
-        return "Hello my own World";
-    }
-}
-----
+<1> The ann:http.server.cors.CrossOrigin[] annotation is applied to a specific endpoint, making the CORS configuration fine-grained.
+<2> The `GET /hello` endpoint has "https://myui.com" as an allowed cross origin endpoint
+<3> The `GET /hello/nocors` endpoint cannot use "https://myui.com" as an origin, since it doesn't have a CORS configuration that allows it.
