--- a/src/main/docs/guide/httpServer/serverConfiguration/cors.adoc
+++ b/src/main/docs/guide/httpServer/serverConfiguration/cors.adoc
@@ -1,189 +1,1 @@
-Micronaut supports CORS (link:https://www.w3.org/TR/cors/[Cross Origin Resource Sharing]) out of the box. By default, CORS requests are rejected. To enable processing of CORS requests, modify your configuration. For example with `application.yml`:
-
-.CORS Configuration Example
-[source,yaml]
-----
-micronaut:
-  server:
-    cors:
-      enabled: true
-----
-
-By only enabling CORS processing, a "wide open" strategy is adopted that allows requests from any origin.
-
-To change the settings for all origins or a specific origin, change the configuration to provide one or more "configurations". By providing any configuration, the default "wide open" configuration is not configured.
-
-.CORS Configurations
-[source,yaml]
-----
-micronaut:
-  server:
-    cors:
-      enabled: true
-      configurations:
-        all:
-          ...
-        web:
-          ...
-        mobile:
-          ...
-----
-
-In the above example, three configurations are provided. Their names (`all`, `web`, `mobile`) are not important and have no significance inside Micronaut. They are there purely to be able to easily recognize the intended user of the configuration.
-
-The same configuration properties can be applied to each configuration. See link:{api}/io/micronaut/http/server/cors/CorsOriginConfiguration.html[CorsOriginConfiguration] for properties that can be defined. The values of each configuration supplied will default to the default values of the corresponding fields.
-
-When a CORS request is made, configurations are searched for allowed origins that match exactly or match the request origin through a regular expression.
-
-== Allowed Origins
-
-To allow any origin for a given configuration, don't include the `allowedOrigins` key in your configuration.
-
-For multiple valid origins, set the `allowedOrigins` key of the configuration to a list of strings. Each value can either be a static value (`http://www.foo.com`) or a regular expression (`^http(|s)://www\.google\.com$`).
-
-Regular expressions are passed to link:{javase}java/util/regex/Pattern.html#compile-java.lang.String-[Pattern#compile] and compared to the request origin with link:{javase}java/util/regex/Matcher.html#matches--[Matcher#matches].
-
-.Example CORS Configuration
-[source,yaml]
-----
-micronaut:
-  server:
-    cors:
-      enabled: true
-      configurations:
-        web:
-          allowedOrigins:
-            - http://foo.com
-            - ^http(|s):\/\/www\.google\.com$
-----
-
-== Allowed Methods
-
-To allow any request method for a given configuration, don't include the `allowedMethods` key in your configuration.
-
-For multiple allowed methods, set the `allowedMethods` key of the configuration to a list of strings.
-
-.Example CORS Configuration
-[source,yaml]
-----
-micronaut:
-  server:
-    cors:
-      enabled: true
-      configurations:
-        web:
-          allowedMethods:
-            - POST
-            - PUT
-----
-
-== Allowed Headers
-
-To allow any request header for a given configuration, don't include the `allowedHeaders` key in your configuration.
-
-For multiple allowed headers, set the `allowedHeaders` key of the configuration to a list of strings.
-
-.Example CORS Configuration
-[source,yaml]
-----
-micronaut:
-  server:
-    cors:
-      enabled: true
-      configurations:
-        web:
-          allowedHeaders:
-            - Content-Type
-            - Authorization
-----
-
-== Exposed Headers
-
-To configure the headers that are sent in the response to a CORS request through the `Access-Control-Expose-Headers` header, include a list of strings for the `exposedHeaders` key in your configuration. None are exposed by default.
-
-.Example CORS Configuration
-[source,yaml]
-----
-micronaut:
-  server:
-    cors:
-      enabled: true
-      configurations:
-        web:
-          exposedHeaders:
-            - Content-Type
-            - Authorization
-----
-
-== Allow Credentials
-
-Credentials are allowed by default for CORS requests. To disallow credentials, set the `allowCredentials` option to `false`.
-
-.Example CORS Configuration
-[source,yaml]
-----
-micronaut:
-  server:
-    cors:
-      enabled: true
-      configurations:
-        web:
-          allowCredentials: false
-----
-
-== Max Age
-
-The default maximum age that preflight requests can be cached is 30 minutes. To change that behavior, specify a value in seconds.
-
-.Example CORS Configuration
-[source,yaml]
-----
-micronaut:
-  server:
-    cors:
-      enabled: true
-      configurations:
-        web:
-          maxAge: 3600 # 1 hour
-----
-
-== Multiple Header Values
-
-By default, when a header has multiple values, multiple headers are sent, each with a single value. It is possible to change the behavior to send a single header with a comma-separated list of values by setting a configuration option.
-
-[source,yaml]
-----
-micronaut:
-  server:
-    cors:
-      single-header: true
-----
-
-== Annotation-based CORS Configuration
-
-Micronaut CORS configuration applies by default to all endpoints in the running application.
-
-As an alternative, CORS configuration can be applied in a more fine-grained manner to specific routes using the
-link:{api}/io/micronaut/http/server/cors/CrossOrigin.html[@CrossOrigin] annotation. This is applied to `@Controller` to apply the CORS configuration to all endpoints in the controller. Alternatively, the annotation can be applied to specific endpoints on a controller, for even more fine-grained control.
-
-The `@CrossOrigin` annotation maps with a one-to-one correspondence to application-wide link:{api}/io/micronaut/http/server/cors/CorsOriginConfiguration.html[CorsOriginConfiguration] configuration properties. To specify just an allowed origin, use `@CrossOrigin("https://foo.com")`. To specify additional configuration details, use  a combination of annotation attributes the same as you would for specifying global `CorsOriginConfiguration` properties.
-
-[source,java]
-----
-@CrossOrigin(
-	allowedOrigins = { "http://foo.com" ,"^http(|s):\\/\\/www\\.google\\.com$" },
-	allowedMethods = { HttpMethod.POST, HttpMethod.PUT },
-	allowedHeaders = { HttpHeaders.CONTENT_TYPE, HttpHeaders.AUTHORIZATION },
-	exposedHeaders = { HttpHeaders.CONTENT_TYPE, HttpHeaders.AUTHORIZATION },
-	allowCredentials = "false",
-	maxAge = 3600
-)
-----
-
-The following example demonstrates how the annotation might be applied to a specific endpoint. To enable CORS for all endpoints in the controller, move the annotation to the class level and configure it appropriately.
-
-snippet::io.micronaut.docs.http.server.cors.CorsController[tags="imports,controller", indent=0, title="@CrossOrigin Example"]
-
-<1> The ann:http.server.cors.CrossOrigin[] annotation is applied to a specific endpoint, making the CORS configuration fine-grained.
-<2> The `GET /hello` endpoint has "https://myui.com" as an allowed cross origin endpoint
-<3> The `GET /hello/nocors` endpoint cannot use "https://myui.com" as an origin, since it doesn't have a CORS configuration that allows it.
+Micronaut supports CORS (link:https://www.w3.org/TR/cors/[Cross Origin Resource Sharing]) out of the box. By default, CORS requests are rejected.
