--- a/src/main/docs/guide/cloud/cloudConfiguration/distributedConfigurationAwsParameterStore.adoc
+++ b/src/main/docs/guide/cloud/cloudConfiguration/distributedConfigurationAwsParameterStore.adoc
@@ -5,7 +5,7 @@ dependency:io.micronaut.aws:micronaut-aws-parameter-store[]
 To enable distributed configuration, make sure https://docs.micronaut.io/latest/guide/#bootstrap[bootstrap] is enabled and create a `src/main/resources/bootstrap.yml` file with the following configuration:
 
 .bootstrap.yml
-[source,yaml]
+[configuration]
 ----
 micronaut:
   application:
