--- a/src/main/docs/guide/httpServer/serverConfiguration/cors/annotationBasedCors.adoc
+++ b/src/main/docs/guide/httpServer/serverConfiguration/cors/annotationBasedCors.adoc
@@ -12,7 +12,7 @@ The `@CrossOrigin` annotation maps with a one-to-one correspondence to applicati
 	allowedMethods = { HttpMethod.POST, HttpMethod.PUT },
 	allowedHeaders = { HttpHeaders.CONTENT_TYPE, HttpHeaders.AUTHORIZATION },
 	exposedHeaders = { HttpHeaders.CONTENT_TYPE, HttpHeaders.AUTHORIZATION },
-	allowCredentials = "false",
+	allowCredentials = false,
 	maxAge = 3600
 )
 ----
