--- a/src/main/docs/guide/httpServer/serverConfiguration/cors/corsAllowCredentials.adoc
+++ b/src/main/docs/guide/httpServer/serverConfiguration/cors/corsAllowCredentials.adoc
@@ -1,7 +1,7 @@
 Credentials are allowed by default for CORS requests. To disallow credentials, set the `allowCredentials` option to `false`.
 
 .Example CORS Configuration
-[source,yaml]
+[configuration]
 ----
 micronaut:
   server:
