--- a/src/main/docs/guide/config/valueAnnotation.adoc
+++ b/src/main/docs/guide/config/valueAnnotation.adoc
@@ -91,8 +91,7 @@ The above instead injects the value of the `my.url` property resolved from appli
 
 You can also use this feature to resolve sub maps. For example, consider the following configuration:
 
-.Example `application.yml` configuration
-[source,yaml]
+[configuration]
 ----
 datasources:
   default:
