--- a/src/main/docs/guide/httpClient/lowLevelHttpClient/clientConfiguration.adoc
+++ b/src/main/docs/guide/httpClient/lowLevelHttpClient/clientConfiguration.adoc
@@ -1,9 +1,9 @@
 === Global Configuration for All Clients
 
-The default HTTP client configuration is a <<configurationProperties, Configuration Properties>> named api:http.client.DefaultHttpClientConfiguration[] that allows configuring the default behaviour for all HTTP clients. For example, in `application.yml`:
+The default HTTP client configuration is a <<configurationProperties, Configuration Properties>> named api:http.client.DefaultHttpClientConfiguration[] that allows configuring the default behaviour for all HTTP clients. For example, in your configuration file (e.g `application.yml`):
 
 .Altering default HTTP client configuration
-[source,yaml]
+[configuration]
 ----
 micronaut:
   http:
@@ -15,10 +15,10 @@ The above example sets the `readTimeout` property of the api:http.client.HttpCli
 
 === Client Specific Configuration
 
-To have separate configuration per-client, there are a couple of options. You can configure <<serviceDiscoveryManual, Service Discovery>> manually in `application.yml` and apply per-client configuration:
+To have separate configuration per-client, there are a couple of options. You can configure <<serviceDiscoveryManual, Service Discovery>> manually in your configuration file (e.g `application.yml`) and apply per-client configuration:
 
 .Manually configuring HTTP services
-[source,yaml]
+[configuration]
 ----
 micronaut:
   http:
@@ -27,10 +27,10 @@ micronaut:
         urls:
           - http://foo1
           - http://foo2
-        read-timeout: 5s # <1>
+        read-timeout: 5s
 ----
 
-<1> The read timeout is applied to the `foo` client.
+- The `read-timeout` is applied to the `foo` client.
 
 WARN: This client configuration can be used in conjunction with the `@Client` annotation, either by injecting an `HttpClient` directly or use on a client interface. In any case, all other attributes on the annotation *will be ignored* except the service id.
 
@@ -80,7 +80,7 @@ ReactorHttpClient httpClient;
 A client that handles a significant number of requests will benefit from enabling HTTP client connection pooling. The following configuration enables pooling for the `foo` client:
 
 .Manually configuring HTTP services
-[source,yaml]
+[configuration]
 ----
 micronaut:
   http:
@@ -90,12 +90,11 @@ micronaut:
           - http://foo1
           - http://foo2
         pool:
-          enabled: true # <1>
-          max-connections: 50 # <2>
+          enabled: true
+          max-connections: 50
 ----
 
-<1> Enables the pool
-<2> Sets the maximum number of connections in the pool
+- `pool` enables the pool and sets the maximum number of connections for it
 
 See the API for link:{api}/io/micronaut/http/client/HttpClientConfiguration.ConnectionPoolConfiguration.html[ConnectionPoolConfiguration] for details on available pool configuration options.
 
@@ -106,7 +105,7 @@ By default, Micronaut shares a common Netty `EventLoopGroup` for worker threads 
 This `EventLoopGroup` can be configured via the `micronaut.netty.event-loops.default` property:
 
 .Configuring The Default Event Loop
-[source,yaml]
+[configuration]
 ----
 micronaut:
   netty:
@@ -125,7 +124,7 @@ For example, if your interactions with an HTTP client involve CPU-intensive work
 The following example configures an additional event loop group called "other" with 10 threads:
 
 .Configuring Additional Event Loops
-[source,yaml]
+[configuration]
 ----
 micronaut:
   netty:
@@ -138,7 +137,7 @@ micronaut:
 Once an additional event loop has been configured you can alter the HTTP client configuration to use it:
 
 .Altering the Event Loop Group used by Clients
-[source,yaml]
+[configuration]
 ----
 micronaut:
   http:
