--- a/src/main/docs/guide/httpServer/serverConfiguration/cors/corsMaxAge.adoc
+++ b/src/main/docs/guide/httpServer/serverConfiguration/cors/corsMaxAge.adoc
@@ -1,7 +1,7 @@
 The default maximum age that preflight requests can be cached is 30 minutes. To change that behavior, specify a value in seconds.
 
 .Example CORS Configuration
-[source,yaml]
+[configuration]
 ----
 micronaut:
   server:
