--- a/src/main/docs/guide/cloud/cloudConfiguration/distributedConfigurationSpringCloud.adoc
+++ b/src/main/docs/guide/cloud/cloudConfiguration/distributedConfigurationSpringCloud.adoc
@@ -15,9 +15,12 @@ spring:
     config:
       enabled: true
       uri: http://localhost:8888/
-      retry-attempts: 4 # optional, number of times to retry
-      retry-delay: 2s # optional, delay between retries
+      retry-attempts: 4
+      retry-delay: 2s
 ----
+
+- `retry-attempts` is optional, and specifies the number of times to retry
+- `retry-delay` is optional, and specifies the delay between retries
 
 Micronaut uses the configured `micronaut.application.name` to look up property sources for the application from Spring Cloud config server configured via `spring.cloud.config.uri`.
 
