--- a/src/main/docs/guide/cloud/serviceDiscovery/serviceDiscoveryRoute53.adoc
+++ b/src/main/docs/guide/cloud/serviceDiscovery/serviceDiscoveryRoute53.adoc
@@ -13,7 +13,7 @@ Here are the steps:
 3. Add health checks or custom health checks (optional)
 4. Add Service ID to your application configuration file like so:
 
-.Sample application.yml
+.Sample application configuration
 [configuration]
 ----
 aws:
@@ -33,7 +33,6 @@ dependency:io.micronaut.aws:micronaut-aws-route53[]
 
 6. On the client side, you need the same dependencies and fewer configuration options:
 
-.Sample application.yml
 [configuration]
 ----
 aws:
