--- a/src/main/docs/guide/httpServer/serverConfiguration/accessLogger.adoc
+++ b/src/main/docs/guide/httpServer/serverConfiguration/accessLogger.adoc
@@ -9,10 +9,14 @@ micronaut:
   server:
     netty:
       access-logger:
-        enabled: true # Enables the access logger
-        logger-name: my-access-logger # A logger name, optional, default is `HTTP_ACCESS_LOGGER`
-        log-format: common # A log format, optional, default is Common Log Format
+        enabled: true
+        logger-name: my-access-logger
+        log-format: common
 ----
+
+- `enabled` Enables the access logger
+- optionally specify a `logger-name`, which defaults to `HTTP_ACCESS_LOGGER`
+- optionally specify a `log-format`, which defaults to the Common Log Format
 
 ==== Filtering access logs
 
@@ -25,13 +29,17 @@ micronaut:
   server:
     netty:
       access-logger:
-        enabled: true # Enables the access logger
-        logger-name: my-access-logger # A logger name, optional, default is `HTTP_ACCESS_LOGGER`
-        log-format: common # A log format, optional, default is Common Log Format
+        enabled: true
+        logger-name: my-access-logger
+        log-format: common
         exclusions:
           - /health
           - /path/.+
 ----
+
+- `enabled` Enables the access logger
+- optionally specify a `logger-name`, which defaults to `HTTP_ACCESS_LOGGER`
+- optionally specify a `log-format`, which defaults to the Common Log Format
 
 ==== Logback Configuration
 
