--- a/src/main/docs/guide/httpServer/serverConfiguration/dualProtocol.adoc
+++ b/src/main/docs/guide/httpServer/serverConfiguration/dualProtocol.adoc
@@ -7,11 +7,11 @@ micronaut:
   server:
     ssl:
       enabled: true
-      build-self-signed: true # <1>
-    dual-protocol : true #<2>
+      build-self-signed: true
+    dual-protocol : true
 ----
-<1> You must configure SSL for HTTPS to work. In this example we are just using a self-signed certificate, but see <<https, Securing the Server with HTTPS>> for other configurations
-<2> Enabling both HTTP and HTTPS is an opt-in feature - setting the `dualProtocol` flag enables it. By default Micronaut only enables one
+- You must configure SSL for HTTPS to work. In this example we are just using a self-signed certificate with `build-self-signed`, but see <<https, Securing the Server with HTTPS>> for other configurations
+- `dual-protocol` enables both HTTP and HTTPS is an opt-in feature - setting the `dualProtocol` flag enables it. By default Micronaut only enables one
 
 
 It is also possible to redirect automatically all HTTP request to HTTPS. Besides the previous configuration, you need to enable this option. For example:
@@ -25,6 +25,7 @@ micronaut:
       enabled: true
       build-self-signed: true
     dual-protocol : true
-    http-to-https-redirect: true # <1>
+    http-to-https-redirect: true
 ----
-<1> Enable HTTP to HTTPS redirects
+
+- `http-to-https-redirect` enables HTTP to HTTPS redirects
