--- a/src/main/docs/guide/management/providedEndpoints/environmentEndpoint.adoc
+++ b/src/main/docs/guide/management/providedEndpoints/environmentEndpoint.adoc
@@ -9,9 +9,11 @@ To enable and configure the environment endpoint, supply configuration through `
 ----
 endpoints:
   env:
-    enabled: Boolean    # default: false
-    sensitive: Boolean  # default: true
+    enabled: Boolean
+    sensitive: Boolean
 ----
+
+- defaults are false for `enabled` and true for `sensitive`
 
 By default the endpoint will mask all values.
 To customize this masking you need to supply a Bean that implements api:management.endpoint.env.EnvironmentEndpointFilter[].
