build: bump up to Apache Groovy 4.0

--- a/src/main/docs/guide/introduction/whatsNew.adoc
+++ b/src/main/docs/guide/introduction/whatsNew.adoc
@@ -1,7 +1,12 @@
 //Micronaut {version} includes the following changes:
 == 4.0.0
 
+=== Apache Groovy 4.0
+
+Micronaut Framework 4.x supports https://groovy-lang.org/releasenotes/groovy-4.0.html[Apache Groovy 4.0].
+
 === Core Changes
+
 
 * <<virtualThreads, Support for Virtual Threads>>
 
