docs: what's new support Kotlin 1.8.0

--- a/src/main/docs/guide/introduction/whatsNew.adoc
+++ b/src/main/docs/guide/introduction/whatsNew.adoc
@@ -1,6 +1,10 @@
 //Micronaut {version} includes the following changes:
 == 4.0.0
 
+=== Kotlin 1.8.0
+
+Micronaut Framework 4.0 supports https://kotlinlang.org/docs/whatsnew18.html[Kotlin 1.8.0]
+
 === Core Changes
 
 * <<virtualThreads, Support for Virtual Threads>>
