--- a/src/main/docs/guide/introduction/whatsNew.adoc
+++ b/src/main/docs/guide/introduction/whatsNew.adoc
@@ -9,6 +9,7 @@ Micronaut Framework 4.x supports https://groovy-lang.org/releasenotes/groovy-4.0
 
 
 * <<virtualThreads, Support for Virtual Threads>>
+* <<filtermethods, Filter Methods>>
 
 ==== Injection of Maps
 
