doc: asciidoc macro migration follow-on from #8613, plus some extra cleanup (#8745)

--- a/src/main/docs/guide/httpClient/lowLevelHttpClient/clientConfiguration.adoc
+++ b/src/main/docs/guide/httpClient/lowLevelHttpClient/clientConfiguration.adoc
@@ -102,7 +102,7 @@ micronaut:
           enabled: true
           max-connections: 50
 ----
-
+- Limit maximum concurrent HTTP/1.1 connections
 - `max-concurrent-http1-connections` limits the maximum concurrent HTTP/1.1 connections to 50.
 - `pool` enables the pool and sets the maximum number of connections for it
 
